--- a/terraform/shared/config/consul_gce.service
+++ b/terraform/shared/config/consul_gce.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 Restart=on-failure
 Environment=CONSUL_ALLOW_PRIVILEGED_PORTS=true
-ExecStart=/usr/local/bin/consul agent -config-dir="/etc/consul.d" -dns-port="53" -recursor="169.254.169.254"
+ExecStart=/usr/local/bin/consul agent -config-dir="/etc/consul.d" -recursor="169.254.169.254"
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGTERM
 User=root
